--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/fs-extra": "^11.0.0",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "fs-extra": "^11.1.0",
@@ -17,6 +18,7 @@
     "music-metadata": "^7.13.0",
     "next": "14.0.0",
     "play-sound": "^1.1.6",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^5.0.0"
