Switch back to VLC

--- a/~/.mpd/mpd.conf
+++ b/~/.mpd/mpd.conf
@@ -1,12 +1,15 @@
-# MPD Configuration for macOS
-# Music directory
+# MPD Configuration for macOS - Direct File Playback
+# Keep music directory for file resolution, but disable database scanning
 music_directory		"/Users/brianthornton/Desktop/Music"
 
 # Playlist directory
 playlist_directory		"~/.mpd/playlists"
 
-# Database file
-db_file			"~/.mpd/database"
+# Disable database - we don't need it for direct file playback
+# db_file			"~/.mpd/database"
+
+# Disable auto-updating the database
+auto_update			"no"
 
 # Audio output for macOS
 audio_output {
